--- a/dropdown.html
+++ b/dropdown.html
@@ -20,13 +20,13 @@
 	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/5.0.0-beta2/css/bootstrap.min.css"> -->
 
 	<!-- Select2 CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-beta.1/css/select2.min.css">
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-beta.1/css/select2.min.css"> -->
 
 	<!-- jQuery -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
 
 	<!-- Select2 JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-beta.1/js/select2.min.js"></script>
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-beta.1/js/select2.min.js"></script> -->
 
 </head>
 <body>
@@ -40,11 +40,11 @@
 <script type="text/javascript">
 	var cleave = new Cleave(".delimiter-mask", {
 		delimiter: " - ",
-		blocks: [3, 3, 3],
+		blocks: [4, 4, 4],
 		uppercase: true
 	});
 	window.addEventListener('load',() => {
-		inputLimitLoad('target','input',9);
+		inputLimitLoad('target','input',12);
 		
 	});
 </script>
